<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello World!</string>
    <string name="app_name">MyStockPortfolio</string>
    <string name="app_title">My Stock Portfolio</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_primo">PrimoActivity</string>
    <string name="action_settings">Settings</string>


    <!-- start: string values for the menu_main/help -->
    <string name="main_activity_help_title">Help</string>
    <string name="main_activity_help_data">        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- end: string values for the menu_main/help -->


    <!-- start: string values for the menu_main/setting -->
    <string name="main_activity_settings_title">Settings</string>
    <!-- end: string values for the menu_main/setting -->


    <!-- start: string values for the menu_main/about -->
    <string name="main_activity_about_title">About MyStockPortfolio...</string>
    <string name="main_activity_about_data">        final class project for android app development.
        1. save a list of stocks in SQLite.
        2. fetch current prices from finance.yahoo.com.
        3. save prices into SQLite for each stock.
        4. update information user screen.
        5. periodically check for price updated.
        6. update prices into SQLite for each changed stock.
        7. update information user screen
           &lt;br>Copyright © 2014 Hoi Wan Louis&lt;/br></string>
    <!-- end: string values for the menu_main/about -->


    <!-- start: string values for the symbolList/app_item sub1 headings -->
    <string name="heading1">Portfolio of Securities</string>
    <!-- end: string values for the symbolList/app_item sub1 headings -->


    <!-- start: string values for the symbolList/app_item sub2 headings -->
    <string name="heading2_symbol_title">Ticker</string>
    <string name="heading2_company_title">Company</string>
    <string name="heading2_opening_price_title">Open</string>
    <string name="heading2_previous_closing_price_title">Close</string>
    <string name="heading2_bid_price_title">Bid</string>
    <string name="heading2_bid_size_title">Size</string>
    <string name="heading2_ask_price_title">Ask</string>
    <string name="heading2_ask_size_title">Size</string>
    <string name="heading2_last_trade_price_title">Trade</string>
    <string name="heading2_last_trade_quantity_title">Shares</string>
    <string name="heading2_last_trade_date_title">Date</string>
    <string name="heading2_last_trade_time_title">Time</string>
    <string name="heading2_insert_datetime_title">InsertDT</string>
    <string name="heading2_modify_datetime_title">ModifyDT</string>
    <!-- end: string values for the symbolList/app_item sub2 headings -->


    <!-- start: string values for the copyright footer -->
    <string name="copyright_textView">Copyright 2014, 2015 HW Tech Services, LLC</string>
    <!-- end: string values for the copyright footer -->


    <!-- start: string values for the copyright footer -->
    <string name="inputSymbolPrompt">Enter a Ticker Symbol</string>
    <!-- end: string values for the copyright footer -->


    <!-- start: string values for fragment Add,Edit,and Delete functionality -->
    <string name="fragment_no_items">No Symbols</string>
    <string name="fragment_menuitem_add">Add</string>
    <string name="fragment_menuitem_edit">Edit</string>
    <string name="fragment_menuitem_delete">Delete</string>

    <string name="fragment_delete_title">Are You Sure?</string>
    <string name="fragment_delete_message">This will permanently delete the symbol: \"%s\</string>
    <string name="fragment_delete_button_cancel">Cancel</string>
    <string name="fragment_delete_button_delete">Delete</string>

    <string name="fragment_save_button">Save</string>
    <string name="fragment_error_saving_button">Okay</string>
    <string name="fragment_error_saving_message">Missing required data, error on save</string>
    <!-- end: string values for fragment Add,Edit, and Delete functionality -->

    <!-- start: string values for save button functionality -->
    <string name="saveItem">Save</string>
    <!-- end: string values for save button functionality -->

    <!--
    See below URL for how to access finance.yahoo.com data
    https://code.google.com/p/yahoo-finance-managed/wiki/csvQuotesDownload
    -->
    <string name="tickerURL">http://finance.yahoo.com/d/quotes.csv?s=</string>

    <!--
    See below URL for all possible 'f' values
    https://code.google.com/p/yahoo-finance-managed/wiki/enumQuoteProperty
        n0=name of company
        s0=ticker symbol
        o0=opening price
        p0=previous days closing price
        a0=ask price
        a5=ask size
        b0=bid price
        b6=bid size
        l1=last trade price
        k3=last trade size
        d1=last trade date
        t1=last trade time
    e.g. the tags for name(n), symbol(s), the latest value(l1), open(o), and the close value of the last trading day(p)
    http://download.finance.yahoo.com/d/quotes.csv?s=GOOG,IBM&f=nsl1op
    -->
    <string name="defaultTickerFields">&amp;f=n0s0o0p0a0a5b0b6l1k3d1t1</string>

    <!-- start: default string values for the portfolio record -->
    <string name="default_opening_price">0.00</string>
    <string name="default_closing_price">0.00</string>

    <string name="default_bid_price">0.01</string>
    <string name="default_bid_size">1</string>

    <string name="default_ask_price">0.02</string>
    <string name="default_ask_size">1</string>

    <string name="default_trade_price">0.015</string>
    <string name="default_trade_quantity">1</string>
    <!-- end: default string values for the portfolio record -->


</resources>
