<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/app_horizontal_margin"
    android:paddingRight="@dimen/app_horizontal_margin"
    android:paddingTop="@dimen/app_horizontal_margin"
    android:paddingBottom="@dimen/app_horizontal_margin"
    tools:context=".AddFragment"
    android:columnCount="1"
    >

    <LinearLayout
        android:id="@+id/linearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/inputSymbolEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/inputSymbolPrompt"
            android:imeOptions="actionDone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <ImageButton
            android:id="@+id/editSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/saveItem"
            android:src="@android:drawable/ic_menu_save"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/heading2_layout"
        style="@style/heading2_layout"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/heading2_symbol_title"
            android:text="@string/heading2_symbol_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_opening_price_title"
            android:text="@string/heading2_opening_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_previous_closing_price_title"
            android:text="@string/heading2_previous_closing_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_last_trade_price_title"
            android:text="@string/heading2_last_trade_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_last_trade_time_title"
            android:text="@string/heading2_last_trade_time_title"
            style="@style/heading2_field"
            />

    </LinearLayout>


    <ListView
        android:id="@+id/list"
        style="@style/symbolList"
        />

</GridLayout>
