<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stock_list_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:mContext=".StockListFragment"
    >

    <LinearLayout
        android:id="@+id/heading2_layout"
        style="@style/heading2_layout"
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/heading2_symbol_title"
            android:text="@string/heading2_symbol_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_opening_price_title"
            android:text="@string/heading2_opening_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_previous_closing_price_title"
            android:text="@string/heading2_previous_closing_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_last_trade_price_title"
            android:text="@string/heading2_last_trade_price_title"
            style="@style/heading2_field"
            />

        <TextView
            android:id="@+id/heading2_last_trade_time_title"
            android:text="@string/heading2_last_trade_time_title"
            style="@style/heading2_field"
            />

    </LinearLayout>


    <ListView
        android:id="@+id/symbolList"
        style="@style/symbolList"
        />


    <!-- android bug fix -->
    <TextView android:id="@android:id/empty"
        android:gravity="center"
        android:layout_width="1px"
        android:layout_height="1px"
        />


</ScrollView>
