<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stock_detail_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:mContext=".StockDetailFragment"
    >

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="14"
        android:useDefaultMargins="true"
        >


        <!--
         -->
        <TextView
            android:id="@+id/heading2_symbol_title"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/heading2_symbol_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/symbolTextView"
            android:layout_column="1"
            android:layout_row="0"
            android:hint="@string/heading2_symbol_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_opening_price_title"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/heading2_opening_price_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/openingPriceTextView"
            android:layout_column="1"
            android:layout_row="1"
            android:hint="@string/heading2_opening_price_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_previous_closing_price_title"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/heading2_previous_closing_price_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/previousClosingPriceTextView"
            android:layout_column="1"
            android:layout_row="2"
            android:hint="@string/heading2_previous_closing_price_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_bid_price_title"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/heading2_bid_price_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/bidPriceTextView"
            android:layout_column="1"
            android:layout_row="3"
            android:hint="@string/heading2_bid_price_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_bid_size_title"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/heading2_bid_size_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/bidSizeTextView"
            android:layout_column="1"
            android:layout_row="4"
            android:hint="@string/heading2_bid_size_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_ask_price_title"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/heading2_ask_price_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/askPriceTextView"
            android:layout_column="1"
            android:layout_row="5"
            android:hint="@string/heading2_ask_price_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_ask_size_title"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/heading2_ask_size_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/askSizeTextView"
            android:layout_column="1"
            android:layout_row="6"
            android:hint="@string/heading2_ask_size_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_price_title"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/heading2_last_trade_price_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/lastTradePriceTextView"
            android:layout_column="1"
            android:layout_row="7"
            android:hint="@string/heading2_last_trade_price_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_quantity_title"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/heading2_last_trade_quantity_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/lastTradeQuantityTextView"
            android:layout_column="1"
            android:layout_row="8"
            android:hint="@string/heading2_last_trade_quantity_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_date_title"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/heading2_last_trade_date_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/lastTradeDateTextView"
            android:layout_column="1"
            android:layout_row="9"
            android:hint="@string/heading2_last_trade_date_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_last_trade_time_title"
            android:layout_column="0"
            android:layout_row="10"
            android:text="@string/heading2_last_trade_time_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/lastTradeTimeTextView"
            android:layout_column="1"
            android:layout_row="10"
            android:hint="@string/heading2_last_trade_time_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_insert_datetime_title"
            android:layout_column="0"
            android:layout_row="11"
            android:text="@string/heading2_insert_datetime_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/insertDateTimeTextView"
            android:layout_column="1"
            android:layout_row="11"
            android:hint="@string/heading2_insert_datetime_title"
            style="@style/FragmentTextView"
            />

        <!--
         -->
        <TextView
            android:id="@+id/heading2_modify_datetime_title"
            android:layout_column="0"
            android:layout_row="12"
            android:text="@string/heading2_modify_datetime_title"
            style="@style/FragmentLabelTextView"
            />

        <TextView
            android:id="@+id/modifyDateTimeTextView"
            android:layout_column="1"
            android:layout_row="12"
            android:hint="@string/heading2_modify_datetime_title"
            style="@style/FragmentTextView"
            />


    </GridLayout>


</ScrollView>
